==> arduino/Arduino/libraries/SimplelinkWifi/utility/spi.cpp <==
#include "SPI.h"
#include "hci.h"
#include "interface.h"
#include "evnt_handler.h"
#include "board.h"
#define READ                    3
#define WRITE                   1
#define HI(value)               (((value) & 0xFF00) >> 8)
#define LO(value)               ((value) & 0x00FF)
#define ASSERT_CS()          digitalWrite(CSpin, LOW);//CSpin low
#define DEASSERT_CS()        digitalWrite(CSpin, HIGH);//CSpin high
#define HEADERS_SIZE_EVNT       (SPI_HEADER_SIZE + 5)
#define SPI_HEADER_SIZE			(5)
#define 	eSPI_STATE_POWERUP 				 (0)
#define 	eSPI_STATE_INITIALIZED  		 (1)
#define 	eSPI_STATE_IDLE					 (2)
#define 	eSPI_STATE_WRITE_IRQ	   		 (3)
#define 	eSPI_STATE_WRITE_FIRST_PORTION   (4)
#define 	eSPI_STATE_WRITE_EOT			 (5)
#define 	eSPI_STATE_READ_IRQ				 (6)
#define 	eSPI_STATE_READ_FIRST_PORTION	 (7)
#define 	eSPI_STATE_READ_EOT				 (8)
#define CC3000_BUFFER_MAGIC_NUMBER (0xDE)

int init_spi(void)
{


	SPI.begin();
	DEASSERT_CS();
	SPI.setBitOrder(MSBFIRST);
	SPI.setDataMode(SPI_MODE1);

	return(ESUCCESS);
	
}

long
SpiFirstWrite(unsigned char *ucBuf, unsigned short usLength)
{
	// workaround for first transaction
	ASSERT_CS();
	
	// Assuming we are running on 24 MHz ~50 micro delay is 1200 cycles;
	delayMicroseconds(50);
	
	// SPI writes first 4 bytes of data
	SpiWriteDataSynchronous(ucBuf, 4);
	
	delayMicroseconds(50);
	
	SpiWriteDataSynchronous(ucBuf + 4, usLength - 4);
	
	// From this point on - operate in a regular way
	sSpiInformation.ulSpiState = eSPI_STATE_IDLE;
	
	DEASSERT_CS();
	
	return(0);
}

void
SpiWriteDataSynchronous(unsigned char *data, unsigned short size)
{
	while (size)
	{
		SPI.transfer(*data);
		size --;
		data++;
	}
}

void
SpiReadDataSynchronous(unsigned char *data, unsigned short size)
{
	long i = 0,j=0;
	unsigned char *data_to_send = tSpiReadHeader;
	
	for (i = 0; i < size; i ++)
	{

		data[i] = SPI.transfer(data_to_send[j]);
		if(j<5)j++;
	}
	
	
}
